#253, bugfix in GSpanGraph generation for perfectly preprocessed graphs

--- a/dev-support/benchmark/fsm/README
+++ b/dev-support/benchmark/fsm/README
@@ -1,4 +1,1 @@
-1.  There must be a file yeast.tlf in the root directory
-
-2.  GraphGen binaries must be in /data/GraphGen
-    Download: http://www.cse.ust.hk/graphgen/
+There must be a file yeast.tlf in the root directory
